--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,15 @@
     box-sizing: border-box;
 }
 
+/* COMMON */
+html {
+    scroll-behavior: smooth;
+} 
+
 /* HEADER */
 header {
     position: absolute;
-    z-index: 1;
+    z-index: 10;
     top: 20px;
     right: 20px;
 }
@@ -21,6 +26,7 @@ nav li {
 main section {
     position: relative;
     height: 100vh;
+    text-align: center;
 }
 #color-A {
     background-color: rgb(138, 224, 224);
@@ -30,4 +36,15 @@ main section {
 }
 #color-C {
     background-color: rgb(42, 65, 126);
+}
+.box-product {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+.box-product h1 {
+    font-size: 70px;
+    font-family: Impact;
 }
