--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,26 @@ html {
 
 /* HEADER */
 header {
-    position: absolute;
+    position: fixed;
     z-index: 10;
-    top: 20px;
-    right: 20px;
+    top: 50px;
+    right: 50px;
 }
 nav li {
     display: inline-block;
-    padding-left: 20px;
+    background-color: rgb(255, 174, 0);
+    margin-left: 50px;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    line-height: 50px
+}
+nav a {
+    text-decoration: none;
+    font-size: 30px;
+    font-family: Impact;
+    color: white;   
 }
 
 /* CORPO */
@@ -29,7 +41,7 @@ main section {
     text-align: center;
 }
 #color-A {
-    background-color: rgb(138, 224, 224);
+    background-color: rgb(110, 190, 190);
 }
 #color-B {
     background-color: rgb(81, 138, 192);
