--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ header {
 nav li {
     display: inline-block;
     background-color: rgb(255, 174, 0);
+    border: 2px solid white;
     margin-left: 50px;
     border-radius: 50%;
     height: 50px;
