--- a/css/style.css
+++ b/css/style.css
@@ -19,20 +19,28 @@ header {
 }
 nav li {
     display: inline-block;
-    background-color: rgb(255, 174, 0);
-    border: 2px solid white;
     margin-left: 50px;
-    border-radius: 50%;
-    height: 50px;
-    width: 50px;
     text-align: center;
-    line-height: 50px
+
 }
 nav a {
+    display: inline-block;
+    background-color: rgb(255, 153, 0);
+    border: 2px solid white;
     text-decoration: none;
     font-size: 30px;
     font-family: Impact;
-    color: white;   
+    color: white;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    line-height: 50px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.144);  
+}
+nav a:hover {
+    background-color: white;
+    border: 2px solid rgb(255, 153, 0);
+    color: rgb(255, 153, 0);
 }
 
 /* CORPO */
